[tool.poetry]
name = "pinboard-archiver"
version = "0.5.0"
description = "Consumer which archives links send to Pinboard"
authors = ["Simon Lundström <github-commits@soy.se>"]
homepage = "https://github.com/simmel/pinboard-archiver"
include = ["pinboard_post.capnp"]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.2.0"
click = "^7.1.2"
pycapnp = "^1.0.0"
importlib-metadata = {version = "^1.4.0", python = "<3.8"}
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"
black = "^21.12b0"
nox = "^2021.10.1"

[tool.poetry.scripts]
pinboard-archiver = 'pinboard_archiver:cli'

[tool.pylint]
    [tool.pylint.master]
    disable= [
        'missing-docstring',
        'consider-using-f-string',
        'W',
        ]

    output-format = 'parseable'
    ignored-modules='capnp'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
